phase-5: code-level security fixes (XXE, KdeConfig, TLS-bypass CI gate) (#9)